# neu-hpc

./: .clang-format  syllabus.md
lec1/: hw-background.md
week1-introduction/: sol.md  word2vec.c  word2vec.ipynb  word2vec_pytorch.py  word2vector.py
week1-introduction/cpp/: main.cpp
word2vec/: word2vec.py
word2vec/cpp/: CMakeLists.txt
